@@ -23,27 +23,15 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>2.4.10</version>
-            <scope>test</scope>
+            <version>2.4.16</version>
+            <type>pom</type>
         </dependency>
 
         <dependency>
             <groupId>org.spockframework</groupId>
             <artifactId>spock-core</artifactId>
-            <version>1.1-groovy-2.4</version>
+            <version>1.3-groovy-2.4</version>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>net.sourceforge</groupId>
-            <artifactId>javaml</artifactId>
-            <version>0.1.5</version>
-        </dependency>
-
-        <dependency>
-            <groupId>de.erichseifert.vectorgraphics2d</groupId>
-            <artifactId>VectorGraphics2D</artifactId>
-            <version>0.13</version>
         </dependency>
 
         <dependency>
@@ -53,16 +41,15 @@
         </dependency>
 
         <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-            <version>1.18.2</version>
-            <scope>compile</scope>
+            <groupId>net.sourceforge</groupId>
+            <artifactId>javaml</artifactId>
+            <version>0.1.5</version>
         </dependency>
 
         <dependency>
             <groupId>io.github.kglowins</groupId>
-            <artifactId>gbparameters</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>gbparams</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
@@ -84,7 +71,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <version>3.8.1</version>
                 <configuration>
                     <release>11</release>
                 </configuration>
@@ -93,7 +80,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
-                <version>1.5</version>
+                <version>3.2.2</version>
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -117,7 +104,7 @@
             <plugin>
                 <groupId>org.codehaus.gmavenplus</groupId>
                 <artifactId>gmavenplus-plugin</artifactId>
-                <version>1.6.3</version>
+                <version>1.8.1</version>
                 <executions>
                     <execution>
                         <goals>
@@ -129,13 +116,12 @@
 
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
+                <version>3.0.0-M4</version>
                 <configuration>
                     <useFile>false</useFile>
                     <includes>
                         <include>**/*Spec.class</include>
                     </includes>
-                    <argLine>--illegal-access=permit</argLine>
                 </configuration>
             </plugin>
         </plugins>
